[project]
name = "seedvr2-tilingupscaler"
description = "Memory-efficient image upscaling using SeedVR2 models with advanced tiling and detail-preserving stitching. Supports both stable and nightly SeedVR2 builds (3B/7B, FP16/FP8, GGUF models). Requires ComfyUI-SeedVR2_VideoUpscaler to be installed."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch>=1.9.0", "torchvision>=0.10.0", "numpy>=1.21.0", "Pillow>=8.0.0", "scipy>=1.7.0", "scikit-image>=0.19.0", "opencv-python>=4.5.0"]

[project.urls]
Repository = "https://github.com/moonwhaler/comfyui-seedvr2-tilingupscaler"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/moonwhaler/comfyui-seedvr2-tilingupscaler/wiki"
"Bug Tracker" = "https://github.com/moonwhaler/comfyui-seedvr2-tilingupscaler/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-seedvr2-tilingupscaler"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

